[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Enemies/kenney/tank_blue.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Enemies/BlueTank.gd" type="Script" id=2]
[ext_resource path="res://Assets/UI/Art/green_bar_001.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/Art/red_bar_001.png" type="Texture" id=4]
[ext_resource path="res://Scenes/SupportScenes/RectExtents.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 20 )

[node name="BlueTank" type="PathFollow2D"]
loop = false
script = ExtResource( 2 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( -1, 0 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = -30.0
margin_top = -30.0
margin_right = 30.0
margin_bottom = -24.0
value = 50.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 3 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ImpactArea" parent="." instance=ExtResource( 5 )]
size = Vector2( 30, 30 )
offset = Vector2( -17, -15 )
